<resources>
    <string name="app_name">PersonaProfileMVPApplication</string>
    <string name="register_please">Регистрируйтесь!</string>
    <string name="enter_nickname">Введите никнейм</string>
    <string name="enter_age">Ваш возраст</string>
    <string name="enter_country">Из какой Вы страны?</string>
    <string name="enter_password">Придумайте пароль</string>
    <string name="register_now">Зарегистрироваться!</string>
    <string name="forget_my_password">Забыл пароль...</string>
    <string name="enter">Войти</string>
    <string name="no_success">No success!</string>
    <string name="this_country_do_not_exist">Такой страны в списке нет!</string>
    <string name="no_connection_with_base">У нас нет связи с базой данных.</string>
    <string name="field_cannot_be_empty">Поле не может быть пустым!</string>
    <string name="password_cannot_be_blank">Пароль не может состоять из пробелов!</string>
    <string name="you_need_register_again">Всё! Вам придётся регистрироваться заново!</string>
    <string name="you_cannt_enter_just_now">Пока никуда войти нельзя!</string>
    <string name="mark_all_fields">Заполните, пожалуйста, форму!</string>
</resources>